syntax = "proto3";

option csharp_namespace = "Delivery.GRPC.Server";
package grpc.health.v1;

service DeliveryHealthGrpc {
  rpc Check(DeliveryHealthCheckRequest) returns (DeliveryHealthCheckResponse);

  rpc Watch(DeliveryHealthCheckRequest) returns (stream DeliveryHealthCheckResponse);
}

message DeliveryHealthCheckRequest {
  string service = 1;
}

message DeliveryHealthCheckResponse {
  enum DeliveryStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  DeliveryStatus status = 1;
}